<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.12"
        android:id="@+id/register_imgLogo"
        app:layout_constraintTop_toBottomOf="@id/horizontal_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />


    <TextView
        android:id="@+id/register_firstNameTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/firstName"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_firstNameTxT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/register_editFirstNameLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_editFirstName"
            android:singleLine="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/register_lastNameTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_editFirstNameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/lastName"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_lastNameTxT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/register_editLastNameLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_editLastName"
            android:singleLine="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/register_usernameTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_editLastNameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_usernameTxT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/register_editUsernameLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_editUsername"
            android:singleLine="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/register_passwordTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_editUsernameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_passwordTxT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/register_editPasswordLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_editPassword"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/register_repeatPasswordTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_editPasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/repeatPassword"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/register_repeatPasswordTxT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/register_editRepeatPasswordLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_editRepeatPassword"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:id="@+id/register_btnLogin"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintTop_toBottomOf="@id/horizontal_end"
        android:backgroundTint="@color/colorAccent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>